snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.module.sha256
af3c9fa27f4de617343dc7f7a8f23daa5b53b3302dc93e59de1014fc535a70ed